--- a/pitch-for-good-front/package.json
+++ b/pitch-for-good-front/package.json
@@ -1,7 +1,6 @@
 {
   "name": "pitch-for-good-front",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "parcel index.html"
@@ -11,5 +10,6 @@
   "license": "ISC",
   "dependencies": {
     "parcel-bundler": "^1.12.3"
-  }
+  },
+  "description": ""
 }
