--- a/.gitignore
+++ b/.gitignore
@@ -12,8 +12,8 @@ node_modules/
 npm-debug.log.*
 /.awcache/*
 /.cache-loader/*
-pitch-for-good-front/.cache/
-/dist/
+/pitch-for-good-front/.cache/
+/pitch-for-good-front/dist/
 ######################
 # SASS
 ######################
