--- a/pitch-for-good-front/application.properties
+++ b/pitch-for-good-front/application.properties
@@ -1,5 +1,6 @@
 spring.mail.host = smtp.gmail.com
-spring.mail.username = ...........
-spring.mail.password = .....
+spring.mail.username = pitchforgood@gmail.com	
+spring.mail.password = PitchPa55word
 spring.mail.port = 587
+spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.starttls.enable = true
